tests/ui/forged_witness.stderr
error: cannot construct `fulcrum::HotToCold<_>` with struct literal syntax due to private fields
  --> tests/ui/forged_witness.rs:12:33
   |
12 |     let _forged: HotToCold<1> = HotToCold {
   |                                 ^^^^^^^^^
   |
   = note: ...and other private field `_witness` that was not provided
